# POO-Tema2

./: CMakeLists.txt  Character.cpp  Character.h  Depot.cpp  Depot.h  Exception.cpp  Exception.h  GenerareID.cpp  GenerareID.h  Humvee.cpp  Humvee.h  Item.cpp  Item.h  Tank.cpp  Tank.h  Vehicle.cpp  Vehicle.h  main.cpp  schemaUML.drawio
